# llm

./: README.md  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
src/: __init__.py  sample.py
tests/: __init__.py  test_sample.py
